minor wording change

--- a/accommodations.html
+++ b/accommodations.html
@@ -33,13 +33,14 @@
           <h5>Hotels</h5>
 	    RIP staff have curated a list of local hotels and costs on <a href="https://docs.google.com/spreadsheets/d/1JjJmB8trvSlfPVuCsZL-dVc0v9SeIlOD3N1CboRuRLE/edit?usp=sharing">this spreadsheet</a>. The next few sections highlight hotels that have more convenient locations.
 	    <h6><b>Illini Union Hotel</b></h6>
-	      The RIP staff have been able to organize a hotel room block at the venue. Unfortunately, there's no discount, but you'll be staying near other attendees! Use code "DDR23" when booking.
+	      RIP staff have been able to organize a hotel room block at the <a href="https://illiniunionhotel.illinois.edu/rooms-rates">venue</a>. Unfortunately, there's no discount, but you'll be staying near other attendees! Use code "DDR23" when booking.
 	    <h6><b>Hotels near iStops</b></h6>
 	      The following hotels are notable for their proximity to iStops listed roughly in order of distance to Illini Union (see <a href="https://rip.ddrillini.club/transportation-local.html">Local Transportation</a> for more details): <a href="https://www.marriott.com/en-us/hotels/cmpts-towneplace-suites-champaign-urbana-campustown/overview/">TownePlace Suites by Marriott</a>, <a href="https://www.hilton.com/en/hotels/cmiilhx-hampton-champaign-urbana/">Hampton Inn</a>, <a href="https://www.gatherguestsuites.com/">Yugo Guest Suites</a>, <a href="https://stayatthei.com/">iHotel</a>, and the cluster of hotels on Lincoln Ave between i-74 and Bradley Ave.<br>
 	      <br>
-	      <b>Note:</b> There are also many hotels near bus stops (e.g., downtown Champaign, further down Neil St) that you will need to pay fare to get to Illini Union or walk a bit to get to a free iStop.
+	      <b>Note:</b> There are also many hotels near bus stops (e.g., downtown Champaign, further down Neil St) that you will need to pay fare to get to Illini Union or walk a bit to get to a free iStop).<br>
+	      <br>
 	  <h5>Airbnb</h5>
-	    Some students or townies living near campus list their apartments or extra bedroom(s) on Airbnb.
+	    Some students and townies living near campus list their apartments or extra bedroom(s) on Airbnb.<br>
 	    <br>
 	  <h5>Finding Roommates</h5>
 	    While hotels and Airbnbs may be cheaper in Champaign-Urbana than other big cities, it's still pricey! Many people travel to RIP, so ask around the DDRIllini Discord to see if folks are up to split rooms/costs.
