removed himalayan chimney, added smith burger co

--- a/food.html
+++ b/food.html
@@ -102,7 +102,7 @@
 	    <b>Nando Milano</b> &mdash; Fancy Italian. On weekends, open for late lunch and dinner.<br>
             <b>Watson's Shack and Rail</b> &mdash; Great local fried chicken restaurant. Offers brunch on Sundays.<br>
             <b>Black Dog</b> &mdash; Local BBQ joint.<br>
-	    <b>Himalayan Chimney</b> &mdash; Sitdown Indian restaurant.<br>
+	    <b>Smith Burger Company</b> &mdash; Really good smash burgers. Located in Collective Pour.<br>
 	    <b>Jupiter's Pizzeria</b> &mdash; Crispy thin crust pizza.<br>
 	    <b>La Bahia</b> &mdash; Mexican-style seafood.<br>
 	    <b>Sticky Rice</b> &mdash; Lao-Thai food, and actual sticky rice!<br>
