--- a/food.html
+++ b/food.html
@@ -37,7 +37,9 @@
 	    <b>Mia Za's</b> &mdash; Customizable pizza, pasta, and sandwiches.<br>
 	    <b>Shawarma Joint</b> &mdash; Chipotle but Middle Eastern. One build your own bowl is easily two meals.<br>
 	    <b>Midsummer Lounge</b> &mdash; Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
-            <b>Teamoji</b> &mdash; Boba, Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
+	    <b>Cracked the Egg Came First</b> &mdash;Creative take on breakfast sandwiches and burritos among other breakfast classics.<br>
+	    <b>Dee-Dee's Beef</b> &mdash; Really good Italian beef and arancini. Only open evenings Thursdays to Saturdays.
+            <b>Teamoji</b> &mdash; Boba shop that also has really good Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
 	    <b>Cocomero</b> &mdash; Self-serve frozen yogurt, waffles, and bungeoppang/taiyaki.<br>
 	    <b>Cravings</b> &mdash; Chinese fast food. Great value for money. Closed Sundays.<br>
 	    <b>Spoon House Korean Kitchen</b> &mdash; Classic Korean dishes with some Korean-Mexican fusion options.<br>
