--- a/food.html
+++ b/food.html
@@ -125,6 +125,7 @@
 	  <h6>Distance from Illini Union: within 15 minutes drive</h6>
 	    <br>
 	    <b>Cheese and Crackers</b> &mdash; Cheese, crackers, European-style deli, and sushi-quality fish (some assembly required). Really good sandwiches. Closed Sundays.<br>
+	    <b>Pandamonium Donuts</b> &mdash; Donuts made from scratch daily with rotating flavors. Only open from morning to early afternoon. Usually has a donut truck on campus outside Krannert.<br>
 	    <b>Sun Singer</b> &mdash; Sitdown American restaurant, also popular for brunch.<br>
 	    <b>Eighty-Three Vietnamese Cuisine</b> &mdash; Vietnamese classic including pho and banh mi. Closed Sundays.<br>
 	    <b>San Maru</b> &mdash; Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
