added trido's recs

--- a/food.html
+++ b/food.html
@@ -69,6 +69,7 @@
 	    <b>The Bread Company</b> &mdash; European-style cafe with fresh baked bread daily. Great sandwiches during weekday lunch hours and upscale pizza, pasta, and small plates weeknights and Saturday nights. Closed Sundays.</br>
 	    <b>Manolo's Pizza and Empanadas</b> &mdash; New York style pizza by the slice and empanadas (both sweet and savory). Better for takeout as there's not much seating. Closed Sundays.<br>
 	    <b>Dubai Grill</b> &mdash; Like Shawarma Joint.<br>
+	    <b>Basil Thai Urbana</b> &mdash; Classic Thai dishes including pad kra pow. Closed Sundays.<br>
 	    <b>Bab Plus</b> &mdash; Classic Korean food. Closed Sundays.<br>
 	    <b>Caffe Paradiso</b> &mdash; Sandwiches, coffee, and desserts. Obama visited once.<br>
 	    <br>
@@ -86,6 +87,7 @@
 	    <b>Siam Terrace</b> &mdash; Thai classics. Checkout their specials menu.<br>
 	    <b>El Paraiso</b> &mdash; Latin American food including dishes like Mofongo, Jibarito, and pupusas. Closed Sundays.<br>
 	    <b>Encanto Restaurant and Bar</b> &mdash; Mexican restaurant with a few Peruvian classics like Lomo Saltado. Good value for money.<br>
+	    <b>Masijta Grill</b> &mdash; Classic Korean dishes, and they have KBBQ!<br>
 	    <b>Baldarotta's</b> &mdash; Porketta sandwiches. Don't sleep on the fries (and add malt vinegar). On weekends, only open for lunch.<br>
 	    <b>RegCakes</b> &mdash; Gluten-free bakery. Closed Sundays.<br>
 	    <b>Broadway Food Hall</b> &mdash; Upscale food hall with many vendors including A Taste of Both Worlds (Filipino-Cambodian), Les Gourmets (Congolese), and Poke Shack. Closed Sundays.<br>
@@ -94,6 +96,7 @@
 	    <b>Panaderia San Miguel Mexican Bakery</b> &mdash; Mexican-style bakery (as the name might suggest).<br>
 	    <b>La Mixteca</b> &mdash; Classic Mexican restaurant.<br>
 	    <b>Los Paisas</b> &mdash; Great birria tacos.<br>
+	    <b>Huaraches Moroleon</b> &mdash; Local favorite for Mexican food, but farther from downtown Urbana.<br>
 	    </p>
 	  <h5>Downtown Champaign (and area a little further south on Neil)</h5>
 	  <h6>Distance from Illini Union: a few stops on 5 or 50W Green, 12 or 120W Teal, 1 or 100 N Yellow, or 2 or 20N Red (free one-way, fare required on the way back), or &lt; 10 minutes drive</h6>
@@ -102,6 +105,7 @@
 	    <b>Maize at the Station</b> &mdash; Same as Maize on Green St but a larger menu and sitdown.<br>
 	    <b>Heavy Spoon Co</b> &mdash; Ice cream mixed with classic, nostalgic breakfast cereals.<br>
 	    <b>Nando Milano</b> &mdash; Fancy Italian. On weekends, open for late lunch and dinner.<br>
+	    <b>Neil St. Blues</b> &mdash; Sould food and a few classic Cajun/Creole options.<br>
             <b>Watson's Shack and Rail</b> &mdash; Great local fried chicken restaurant. Offers brunch on Sundays.<br>
             <b>Black Dog</b> &mdash; Local BBQ joint.<br>
 	    <b>Smith Burger Company</b> &mdash; Really good smash burgers. Located in Collective Pour. Closed Sundays.<br>
@@ -129,6 +133,7 @@
 	    <b>Sun Singer</b> &mdash; Sitdown American restaurant, also popular for brunch.<br>
 	    <b>Eighty-Three Vietnamese Cuisine</b> &mdash; Vietnamese classic including pho and banh mi. Closed Sundays.<br>
 	    <b>San Maru</b> &mdash; Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
+	    <b>Mo's Burritos</b> &mdash; Classic street tacos in a classic taco truck.<br>
 	    <b>Los Hidalguense Taco Truck</b> &mdash; Amazing al pastor tacos.
 	    </p>
       </div>
