RIP 13.5 start + stream links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>RIP 13.5</title>
-<meta name="description" content="Rumble in the Prairie 13.5 will be November 17–19, 2023! This twice-annual tournament series is one of the longest running in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. ">
+<meta name="description" content="Rumble in the Prairie 13.5 is happening now, November 17–19, 2023! This twice-annual tournament series is one of the longest running in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods.">
 <meta name="author" content="DDRIllini">
 
   <!-- we still need to do this for mobile websites -->
@@ -33,8 +33,11 @@
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
 
-        <h5>Forms</h5>
-        <a class="button button-primary" href="https://forms.gle/H9e1LmXo1L84Uc1U9">Volunteer/Hardware</a>
+        <h5>Streams</h5>
+        <a class="button button-primary" href="https://twitch.tv/cartertheq">Stream A</a>
+        <a class="button button-primary" href="https://twitch.tv/intlTiming">Stream B</a> <br />
+        <a class="button button-primary" href="https://twitch.tv/DDRIllini">Stream C</a>
+        <a class="button button-primary" href="https://twitch.tv/DDRIllini2">Stream D</a>
 
         <h5>Downloads</h5>
         <a class="button button-primary" href="https://drive.google.com/file/d/1ZSbThyLzZP_eY9jTOpFK6Worf7F7yE1W/view">Singles Qualifier DL</a>
