add schedule link b/c start.gg page no tiene

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         <p>November 17–19, 2023 @ UIUC</p>
 
         <!-- Standard buttons -->
-        <p><a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-13-5/details">Start.gg Event Page</a></p>
+        <p>
+	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-13-5/details">Start.gg Event Page</a>
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1HkdydtOzn-4MCBOFG6r1kzvqpaKNltSNLp2gd7Rcbn8/edit#gid=0">Schedule</a>
+	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
