--- a/media/index.html
+++ b/media/index.html
@@ -23,7 +23,10 @@
 The global script is not loaded. Deobfuscate links using the source code at <a href="./test.js"><code>test.js</code></a>.</p>
 <p>Most links to Google Photos® directories</p>
 
-<h5><span title="new tunes">RIP 13</span> <small>2023-03</small></h5>
+<h5><span title="new tunes">RIP 13.5</span> <small>2023-11</small></h5>
+<p>The event is currently ongoing!</p>
+
+<h5>RIP 13 <small>2023-03</small></h5>
 <ul>
 <li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAgMCgcHDQkKDA8ICwsMEA8K">DDRIllini Discord® server, photos channel</a>, assorted</li>
 <li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
