RIP 13.5 has ended

--- a/media/index.html
+++ b/media/index.html
@@ -24,7 +24,13 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <p>Most links to Google Photos® directories</p>
 
 <h5><span title="new tunes">RIP 13.5</span> <small>2023-11</small></h5>
-<p>The event is currently ongoing!</p>
+<ul>
+<li>DDRIllini Discord server channels:
+<a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPDwkLDA0NDg4PCQcMCQ8NCgwQ">photos</a>,
+<a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQcODgoJCgkIBwcLEAoICw4QCxEPDwkMBwoQDA8QDgwICg8NCAcI">general RIP</a>
+</li>
+<li>Mallow: <a href="gp://bEgNV2lzV0hpdX1eD0x/Wgc=">photos</a></li>
+</ul>
 
 <h5>RIP 13 <small>2023-03</small></h5>
 <ul>
