--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>RIP 13.5</title>
-<meta name="description" content="Rumble in the Prairie 13.5 is happening now, November 17–19, 2023! This twice-annual tournament series is one of the longest running in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods.">
+<meta name="description" content="Rumble in the Prairie is one of the longest running tournament series in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods.">
 <meta name="author" content="DDRIllini">
 
   <!-- we still need to do this for mobile websites -->
