RIP 12.1: Mallow photos, factual error fix

--- a/media/index.html
+++ b/media/index.html
@@ -49,11 +49,15 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <li>PSU collab.: <a href="gp://bVVvc2l+ZklrXGxLWE9XTAg=">photos</a></li>
 </ul>
 
-<h5>Older Events</h5>
+<h5>RIP 12.1 <small>2022-03</small></h5>
 <ul>
-<li><a href="gp://U0xrRwxISVl9eHZ8S1BabAc=">RIP 12.1 <small>2022-03</small>, PSU collab.</a></li>
+<li>PSU collab.: <a href="gp://U0xrRwxISVl9eHZ8S1BabAc=">photos</a></li>
+<li>Mallow: <a href="gp://aQhpUVtfUm8LUGhQXWpNWwk=">photos</a></li>
 </ul>
-<p style="font-size:90%;">RIP 12 would have occurred in 2020-03, <br> but was cancelled due to the COVID-19 pandemic, <br> two days before it would have started.</p>
+
+<p>RIP 12 would have started&nbsp;on&nbsp;2020-03-13, but&nbsp;was&nbsp;cancelled on&nbsp;2020-03-12 due&nbsp;to&nbsp;the COVID-19&nbsp;pandemic.</p>
+
+<h5>Older Events</h5>
 <ul>
 <li><a href="gp://X1oMcnxVSVh9Zn9sD2p4Cwk=">RIP 11.5 <small>2019-11</small>, Mallow</a></li>
 <li><a href="gp://V2t+R1VRV0h8f0sJB0hrXwc=">RIP 11, Mallow</a></li>
