renamed to rip 14, updated dates and start.gg

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>RIP 13.5</title>
+  <title>RIP 14</title>
 <meta name="description" content="Rumble in the Prairie is one of the longest running tournament series in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods.">
 <meta name="author" content="DDRIllini">
 
@@ -24,12 +24,12 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 4%">
-        <h3 style="margin-bottom:0.2em;">RIP 13.5</h4>
-        <p>November 17–19, 2023 @ UIUC</p>
+        <h3 style="margin-bottom:0.2em;">RIP 14</h4>
+        <p>March 15-17, 2024 @ UIUC</p>
 
         <!-- Standard buttons -->
         <p>
-	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-13-5/details">Start.gg Event Page</a>
+	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-14/details">Start.gg Event Page</a>
 	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1HkdydtOzn-4MCBOFG6r1kzvqpaKNltSNLp2gd7Rcbn8/edit#gid=0">Schedule</a>
 	</p>
 
