changed downloads and rules to empty links

--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
         <!-- Standard buttons -->
         <p>
 	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-14/details">Start.gg Event Page</a>
-	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1HkdydtOzn-4MCBOFG6r1kzvqpaKNltSNLp2gd7Rcbn8/edit#gid=0">Schedule</a>
+	<a class="button button-primary" href="#">Schedule (TBD)</a>
 	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
 
         <h5>Streams</h5>
-        <a class="button button-primary" href="https://twitch.tv/cartertheq">Stream A</a>
-        <a class="button button-primary" href="https://twitch.tv/intlTiming">Stream B</a> <br />
-        <a class="button button-primary" href="https://twitch.tv/DDRIllini">Stream C</a>
-        <a class="button button-primary" href="https://twitch.tv/DDRIllini2">Stream D</a>
+        <a class="button button-primary" href="#">Stream A (TBD)</a>
+        <a class="button button-primary" href="#">Stream B (TBD)</a> <br />
+        <a class="button button-primary" href="#">Stream C (TBD)</a>
+        <a class="button button-primary" href="#">Stream D (TBD)</a>
 
         <h5>Downloads</h5>
-        <a class="button button-primary" href="https://drive.google.com/file/d/1ZSbThyLzZP_eY9jTOpFK6Worf7F7yE1W/view">Singles Qualifier DL</a>
-        <a class="button button-primary" href="https://drive.google.com/drive/folders/1HyW70R0z-PlQmkj-C8JJHdJIRLKDuuDS">Singles DL</a>
-        <a class="button button-primary" href="https://drive.google.com/file/d/1u2Gq1y26YzTTP4k56iagIqSjPMowT--6/view?usp=sharing">Doubles DL</a>
+        <a class="button button-primary" href="#">Singles Qualifier DL (TBD)</a>
+        <a class="button button-primary" href="#">Singles DL (TBD)</a>
+        <a class="button button-primary" href="#">Doubles DL (TBD)</a>
 
         <h5>Rules</h5>
-		<a class="button button-primary" href="https://docs.google.com/document/d/1BmqCZ4VY-RKNIb-JqNcDkbbes8hwm27MuG31SYsQYEg/edit?usp=sharing">Singles Rules</a>
-        <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
+		<a class="button button-primary" href="#">Singles Rules (TBD)</a>
+        <a class="button button-primary" href="#">Doubles Rules (TBD)</a>
 
         <h5>Local Guides</h5>
         <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
