--- a/accommodations.html
+++ b/accommodations.html
@@ -31,9 +31,9 @@
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Where to stay in Champaign-Urbana</h4>
           <h5>Hotels</h5>
-	    RIP staff have curated a list of local hotels and costs on <a href="https://docs.google.com/spreadsheets/d/1JjJmB8trvSlfPVuCsZL-dVc0v9SeIlOD3N1CboRuRLE/edit?usp=sharing">this spreadsheet</a>. The next few sections highlight hotels that have more convenient locations.
+	    RIP staff have curated a list of local hotels and costs on a spreadsheet (coming soon for RIP 14). The next few sections highlight hotels that have more convenient locations.
 	    <h6><b>Illini Union Hotel</b></h6>
-	      RIP staff have been able to organize a hotel room block at the <a href="https://illiniunionhotel.illinois.edu/rooms-rates">venue</a>. Unfortunately, there's no discount, but you'll be staying near other attendees! Use code "DDR23" when booking.
+	      RIP staff are working to get a hotel room block at the <a href="https://illiniunionhotel.illinois.edu/rooms-rates">venue</a> for RIP 14. Details will be updated here and on Discord once finalized.
 	    <h6><b>Hotels near iStops</b></h6>
 	      The following hotels are notable for their proximity to iStops listed roughly in order of distance to Illini Union (see <a href="https://rip.ddrillini.club/transportation-local.html">Local Transportation</a> for more details): <a href="https://www.marriott.com/en-us/hotels/cmpts-towneplace-suites-champaign-urbana-campustown/overview/">TownePlace Suites by Marriott</a>, <a href="https://www.hilton.com/en/hotels/cmiilhx-hampton-champaign-urbana/">Hampton Inn</a>, <a href="https://www.gatherguestsuites.com/">Yugo Guest Suites</a>, <a href="https://stayatthei.com/">iHotel</a>, and the cluster of hotels on Lincoln Ave between i-74 and Bradley Ave.<br>
 	      <br>
