--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
         <a class="button button-primary" href="#">Stream D (TBD)</a>
 
         <h5>Downloads</h5>
-        <a class="button button-primary" href="#">Singles Qualifier DL (TBD)</a>
-        <a class="button button-primary" href="#">Singles DL (TBD)</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/1b2XRrY3XpEEcgFsLxh13v0lPUZD-N9Hr/view?usp=sharing">Singles DL</a>
         <a class="button button-primary" href="#">Doubles DL (TBD)</a>
 
         <h5>Rules</h5>
-		<a class="button button-primary" href="#">Singles Rules (TBD)</a>
+		<a class="button button-primary" href="https://docs.google.com/document/d/18FqXfot5Vj2MihyRqTgG7z3rdB8B7-y0v1KMHMw-3Rw/edit">Singles Rules</a>
         <a class="button button-primary" href="#">Doubles Rules (TBD)</a>
 
         <h5>Local Guides</h5>
