main page: style WIP / unreleased buttons
A spacer element replaces the manual <br> tags.

The spacing in general is still kind of messed up.
Headers have more bottom padding than top padding.
The front page is apparently allergic to <p>s because
those have weird spacing too.
I would love to rip out skeleton, but bootstrap is
way too heavy weight for something like this.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 </head>
 <body>
+<!-- TODO spacing is seriously messed up -->
 
   <div class="container">
     <div class="row">
@@ -30,39 +31,39 @@
         <!-- Standard buttons -->
         <p>
 	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-14/details">Start.gg Event Page</a>
-	<a class="button button-primary" href="#">Schedule (TBD)</a>
+	<a class="button" href="#">Schedule</a>
 	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
 
-        <h5>Streams</h5>
-        <a class="button button-primary" href="#">Stream A (TBD)</a>
-        <a class="button button-primary" href="#">Stream B (TBD)</a> <br />
-        <a class="button button-primary" href="#">Stream C (TBD)</a>
-        <a class="button button-primary" href="#">Stream D (TBD)</a>
+<h5>Streams</h5>
+<p style="margin-bottom:0.4em;">Stream links will not be available until the event starts </p>
+<a class="button" href="#">Stream A</a>
+<a class="button" href="#">Stream B</a> <br />
+<a class="button" href="#">Stream C</a>
+<a class="button" href="#">Stream D</a>
 
-        <h5>Downloads</h5>
-        <a class="button button-primary" href="https://drive.google.com/file/d/1b2XRrY3XpEEcgFsLxh13v0lPUZD-N9Hr/view?usp=sharing">Singles DL</a>
-        <a class="button button-primary" href="#">Doubles DL (TBD)</a>
+<h5>Downloads</h5>
+<a class="button button-primary" href="https://drive.google.com/file/d/1b2XRrY3XpEEcgFsLxh13v0lPUZD-N9Hr/view?usp=sharing">Singles DL</a>
+<a class="button" href="#">Doubles DL (TBD)</a>
 
-        <h5>Rules</h5>
-		<a class="button button-primary" href="https://docs.google.com/document/d/18FqXfot5Vj2MihyRqTgG7z3rdB8B7-y0v1KMHMw-3Rw/edit">Singles Rules</a>
-        <a class="button button-primary" href="#">Doubles Rules (TBD)</a>
+<h5>Rules</h5>
+<a class="button button-primary" href="https://docs.google.com/document/d/18FqXfot5Vj2MihyRqTgG7z3rdB8B7-y0v1KMHMw-3Rw/edit">Singles Rules</a>
+<a class="button" href="#">Doubles Rules (TBD)</a>
 
-        <h5>Local Guides</h5>
-        <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
+<h5>Local Guides</h5>
+<a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
 	<a class="button button-primary" href="accommodations.html">Where to Stay</a>
-	<br>
-        <a class="button button-primary" href="transportation-local.html">Local Transportation & Parking</a>
-        <a class="button button-primary" href="food.html">Food!</a>
-        <br>
-        <a class="button button-primary" href="media/">media</a>
-	<br>
-	<br>
-      </div>
-    </div>
-  </div>
+<br>
+<a class="button button-primary" href="transportation-local.html">Local Transportation &amp; Parking</a>
+<a class="button button-primary" href="food.html">Food!</a>
+<br>
+<a class="button button-primary" href="media/">media</a>
+<div style="height:4em;" aria-description="cosmetic padding at bottom of page"></div>
+</div>
+</div>
+</div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
