updated schedule link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Standard buttons -->
         <p>
 	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-14/details">Start.gg Event Page</a>
-	<a class="button" href="#">Schedule</a>
+	<a class="button" href="https://docs.google.com/spreadsheets/d/1vL6Fmmi1rMaX_9IsGDughuQPsmWYgOVdPwuBqea6Q6c/edit?usp=sharing">Schedule</a>
 	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
