added tetris rules

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 <h5>Rules</h5>
 <a class="button button-primary" href="https://docs.google.com/document/d/18FqXfot5Vj2MihyRqTgG7z3rdB8B7-y0v1KMHMw-3Rw/edit">Singles Rules</a>
 <a class="button" href="#">Doubles Rules (TBD)</a>
+<br>
+<a class="button" href="https://docs.google.com/document/d/1kwdQUvPQCCptEP0FXrZaINcdUvozQXr9PQ5L99rwmg4/edit?usp=sharing">Tetris Rules</a>
 
 <h5>Local Guides</h5>
 <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
