updated button type for schedule and tetris rules

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Standard buttons -->
         <p>
 	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-14/details">Start.gg Event Page</a>
-	<a class="button" href="https://docs.google.com/spreadsheets/d/1vL6Fmmi1rMaX_9IsGDughuQPsmWYgOVdPwuBqea6Q6c/edit?usp=sharing">Schedule</a>
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1vL6Fmmi1rMaX_9IsGDughuQPsmWYgOVdPwuBqea6Q6c/edit?usp=sharing">Schedule</a>
 	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
@@ -52,7 +52,7 @@
 <a class="button button-primary" href="https://docs.google.com/document/d/18FqXfot5Vj2MihyRqTgG7z3rdB8B7-y0v1KMHMw-3Rw/edit">Singles Rules</a>
 <a class="button" href="#">Doubles Rules (TBD)</a>
 <br>
-<a class="button" href="https://docs.google.com/document/d/1kwdQUvPQCCptEP0FXrZaINcdUvozQXr9PQ5L99rwmg4/edit?usp=sharing">Tetris Rules</a>
+<a class="button button-primary" href="https://docs.google.com/document/d/1kwdQUvPQCCptEP0FXrZaINcdUvozQXr9PQ5L99rwmg4/edit?usp=sharing">Tetris Rules</a>
 
 <h5>Local Guides</h5>
 <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
