updated listings and removed closed restaurants

--- a/food.html
+++ b/food.html
@@ -30,12 +30,12 @@
     <div class="row">
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Fooooooood</h4>
-	<p>We have an amazing food scene in Champaign-Urbana! In this list, restaurants are grouped by location (from nearest to farthest) with transportation options. This list is not exhaustive but is intended to highlight local businesses. There should be plenty of options for your stay during RIP. See the <a href="https://rip.ddrillini.club/transportation-local.html">Local Transportation</a> page for more details on the transportation options.</p>
+	<p>We have an amazing food scene in Champaign-Urbana! In this list, restaurants are grouped by location (from nearest to farthest) with transportation options. This list is not exhaustive but is intended to highlight local businesses (that are typically open on weekends). There should be plenty of options for your stay during RIP. See the <a href="https://rip.ddrillini.club/transportation-local.html">Local Transportation</a> page for more details on the transportation options.</p>
           <h5>Campustown</h5>
 	  <h6>Distance from Illini Union: 5-15 minutes walking or 2-4 stops on the 5W or 50W Green bus (free!)</h6>
 	    <p>
 	    <b>Mia Za's</b> &mdash; Customizable pizza, pasta, and sandwiches.<br>
-	    <b>Shawarma Joint</b> &mdash; Chipotle but Middle Eastern. One build your own bowl is easily two meals.<br>
+	    <b>Shawarma Joint</b> &mdash; Chipotle but Middle Eastern. One build your own bowl is easily two meals. They have a second location near downtown Urbana.<br>
 	    <b>Midsummer Lounge</b> &mdash; Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
 	    <b>Cracked the Egg Came First</b> &mdash;Creative take on breakfast sandwiches and burritos among other breakfast classics.<br>
 	    <b>Dee-Dee's Beef</b> &mdash; Really good Italian beef and arancini. Only open evenings Thursdays to Saturdays.
@@ -45,7 +45,7 @@
 	    <b>Spoon House Korean Kitchen</b> &mdash; Classic Korean dishes with some Korean-Mexican fusion options.<br>
 	    <b>Latea Bubble Tea Lounge</b> &mdash; Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
 	    <b>Poke Lab</b> &mdash; Build your own poke bowls.<br>
-	    <b>GG Bowl</b> &mdash; Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
+	    <b>GG Bowl</b> &mdash; Build your own Mala Tang (like spicy hotpot, but in a bowl) and Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
 	    <b>Paris Super Crepes</b> &mdash; Sweet and savory crepes and other snack items.<br>
 	    <b>Szechuan Taste</b> &mdash; Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
 	    <b>Evo Cafe</b> &mdash; Really good Sichuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
@@ -54,11 +54,10 @@
 	    <b>Signature Grill</b> &mdash; Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
 	    <b>Bangkok Thai Restaurant and Pho 911</b> &mdash; Classic Thai dishes and pho. Great value for money.<br>
 	    <b>Brewlab</b> &mdash; Local hip coffee shop.<br>
-	    <b>Sakanaya</b> &mdash; Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance. Typically only open for dinner, but also has lunch hours on Saturday.<br>
+	    <b>Sakanaya</b> &mdash; Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance. Typically only open for dinner, but also has lunch hours on Friday and Saturday.<br>
 	    <b>Northern Cuisine</b> &mdash; Amazing Chinese food from the northeastern (Dongbei) region. Better to go with a group.<br>
-	    <b>Chong Qing House</b> &mdash; Really good Sichuan/Chongqing-style food (as the name might suggest). Similar to Evo Cafe with some variations on dishes. Better to go with a group.<br>
 	    <b>Jurassic Grill</b> &mdash; Typical burger joint with a hidden empanada menu.<br>
-	    <b>Sushi Man</b> &mdash; Good sushi restaurant. Better for takeout as there's not as much seating.<br>
+	    <b>Sushi Man</b> &mdash; Good sushi restaurant. Better for takeout as there's not as much seating. Their second location in northwest Champaign has an all-you-can-eat option.<br>
 	    <b>Naya Indian Cuisine</b> &mdash; Really good northern style Indian food.<br>
 	    <b>Moment Bakery</b> &mdash; Chinese-style bakery with amazing pastries, breads, and cakes. Closed Sundays.<br>
 	    <b>Maize Mexican Grill</b> &mdash; A UIUC staple. Solid street tacos, burritos, and other Mexican classics.<br>
@@ -86,14 +85,14 @@
 	    <b>Rick's Bakery</b> &mdash; Local bakery selling freshly made breads, pastries, and sweets. Also has some lunch offerings including burritos and tamales. Closed Sundays.<br>
 	    <b>Siam Terrace</b> &mdash; Thai classics. Checkout their specials menu.<br>
 	    <b>El Paraiso</b> &mdash; Latin American food including dishes like Mofongo, Jibarito, and pupusas. Closed Sundays.<br>
+	    <b>The Main Scoop</b> &mdash; Local ice cream shop with classic and creative flavors.<br>
 	    <b>Encanto Restaurant and Bar</b> &mdash; Mexican restaurant with a few Peruvian classics like Lomo Saltado. Good value for money.<br>
 	    <b>Masijta Grill</b> &mdash; Classic Korean dishes, and they have KBBQ!<br>
 	    <b>Baldarotta's</b> &mdash; Porketta sandwiches. Don't sleep on the fries (and add malt vinegar). On weekends, only open for lunch.<br>
-	    <b>RegCakes</b> &mdash; Gluten-free bakery. Closed Sundays.<br>
-	    <b>Broadway Food Hall</b> &mdash; Upscale food hall with many vendors including A Taste of Both Worlds (Filipino-Cambodian), Les Gourmets (Congolese), and Poke Shack. Closed Sundays.<br>
+	    <b>Broadway Food Hall</b> &mdash; Food hall hosting A Taste of Both Worlds (Filipino-Cambodian) and Les Gourmets (Congolese). Closed Sundays.<br>
             <b>Xinh Xinh Cafe</b> &mdash; Great pho and summer rolls. Closed Sundays.<br>
             <b>El Oasis</b> &mdash; Mexican-style ice cream.<br>
-	    <b>Panaderia San Miguel Mexican Bakery</b> &mdash; Mexican-style bakery (as the name might suggest).<br>
+	    <b>Panaderia San Miguel Mexican Bakery</b> &mdash; Mexican-style bakery (as the name might suggest. Amazing, huge conchas and other sweet treats.<br>
 	    <b>La Mixteca</b> &mdash; Classic Mexican restaurant.<br>
 	    <b>Los Paisas</b> &mdash; Great birria tacos.<br>
 	    <b>Huaraches Moroleon</b> &mdash; Local favorite for Mexican food, but farther from downtown Urbana.<br>
@@ -103,15 +102,15 @@
 	    <p>
 	    <b>Pizzeria Antica</b> &mdash; Upscale pizza certified authentic by the City of Naples. Closed Sundays.<br>
 	    <b>Maize at the Station</b> &mdash; Same as Maize on Green St but a larger menu and sitdown.<br>
-	    <b>Heavy Spoon Co</b> &mdash; Ice cream mixed with classic, nostalgic breakfast cereals.<br>
 	    <b>Nando Milano</b> &mdash; Fancy Italian. On weekends, open for late lunch and dinner.<br>
 	    <b>Neil St. Blues</b> &mdash; Sould food and a few classic Cajun/Creole options.<br>
             <b>Watson's Shack and Rail</b> &mdash; Great local fried chicken restaurant. Offers brunch on Sundays.<br>
+	    <b>The Space</b> &mdash; Really good smash burgers. Also a small music and local events venue (including a Mario Kart tournament on Thursdays) as well as hot sauce shop. Only open for dinner and closed Sundays.<br>
             <b>Black Dog</b> &mdash; Local BBQ joint.<br>
 	    <b>Smith Burger Company</b> &mdash; Really good smash burgers. Located in Collective Pour. Closed Sundays.<br>
 	    <b>Jupiter's Pizzeria</b> &mdash; Crispy thin crust pizza.<br>
 	    <b>La Bahia</b> &mdash; Mexican-style seafood.<br>
-	    <b>Sticky Rice</b> &mdash; Lao-Thai food, and actual sticky rice!<br>
+	    <b>Sticky Rice</b> &mdash; Lao-Thai food, and actual sticky rice! Recommend the Khao Poon.<br>
 	    <b>Stango Cuisine</b> &mdash; Proudly the only Zambian restaurant in North America. Closed Sundays.<br>
 	    <b>Tasty Tart</b> &mdash; Amazing individual-sized shortcrust pastries. They close when they sell out!<br>
 	    <b>Afghan Cuisine Restaurant</b> &mdash; Amazing Afghani food. Might have long waits as they recently opened at this location. Closed Sundays.<br>
@@ -130,8 +129,8 @@
 	    <br>
 	    <b>Cheese and Crackers</b> &mdash; Cheese, crackers, European-style deli, and sushi-quality fish (some assembly required). Really good sandwiches. Closed Sundays.<br>
 	    <b>Pandamonium Donuts</b> &mdash; Donuts made from scratch daily with rotating flavors. Only open from morning to early afternoon. Usually has a donut truck on campus outside Krannert.<br>
-	    <b>Sun Singer</b> &mdash; Sitdown American restaurant, also popular for brunch.<br>
-	    <b>Eighty-Three Vietnamese Cuisine</b> &mdash; Vietnamese classic including pho and banh mi. Closed Sundays.<br>
+	    <b>Sun Singer</b> &mdash; Sitdown New American restaurant, also popular for brunch.<br>
+	    <b>Eighty-Three Vietnamese Cuisine</b> &mdash; Vietnamese classics including pho and banh mi. Closed Sundays.<br>
 	    <b>San Maru</b> &mdash; Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
 	    <b>Mo's Burritos</b> &mdash; Classic street tacos in a classic taco truck.<br>
 	    <b>Los Hidalguense Taco Truck</b> &mdash; Amazing al pastor tacos.
