updated hotel spreadsheet link

--- a/accommodations.html
+++ b/accommodations.html
@@ -31,7 +31,7 @@
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Where to stay in Champaign-Urbana</h4>
           <h5>Hotels</h5>
-	    RIP staff have curated a list of local hotels and costs on a spreadsheet (coming soon for RIP 14). The next few sections highlight hotels that have more convenient locations.
+	  RIP staff have curated a list of local hotels and costs on this <b><a href="https://docs.google.com/spreadsheets/d/1cBqdXMWqRO3LHyXlXHum_GpTKfqbk8k9Xa6OF8VvwYo/edit#gid=1844837274">spreadsheet</a></b>. The next few sections highlight hotels that have more convenient locations.
 	    <h6><b>Illini Union Hotel</b></h6>
 	      RIP staff are working to get a hotel room block at the <a href="https://illiniunionhotel.illinois.edu/rooms-rates">venue</a> for RIP 14. Details will be updated here and on Discord once finalized.
 	    <h6><b>Hotels near iStops</b></h6>
