updated doubles rules and download

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
 <h5>Downloads</h5>
 <a class="button button-primary" href="https://drive.google.com/file/d/1b2XRrY3XpEEcgFsLxh13v0lPUZD-N9Hr/view?usp=sharing">Singles DL</a>
-<a class="button" href="#">Doubles DL (TBD)</a>
+<a class="button button-primary" href="https://drive.google.com/file/d/1yjXVTKcYVrHaY_tkCwAhmEkdogCNpk3H/view?usp=drive_link">Doubles DL</a>
 
 <h5>Rules</h5>
 <a class="button button-primary" href="https://docs.google.com/document/d/18FqXfot5Vj2MihyRqTgG7z3rdB8B7-y0v1KMHMw-3Rw/edit">Singles Rules</a>
-<a class="button" href="#">Doubles Rules (TBD)</a>
+<a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 <br>
 <a class="button button-primary" href="https://docs.google.com/document/d/1kwdQUvPQCCptEP0FXrZaINcdUvozQXr9PQ5L99rwmg4/edit?usp=sharing">Tetris Rules</a>
 
