Update index with RIP 14 stream links
- CERiNG

--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
 
 <h5>Streams</h5>
-<p style="margin-bottom:0.4em;">Stream links will not be available until the event starts </p>
-<a class="button" href="#">Stream A</a>
-<a class="button" href="#">Stream B</a> <br />
-<a class="button" href="#">Stream C</a>
-<a class="button" href="#">Stream D</a>
+<a class="button" href="https://twitch.tv/CarterTheQ">Stream A</a>
+<a class="button" href="https://twitch.tv/IntlTiming">Stream B</a> <br />
+<a class="button" href="https://twitch.tv/DDRIllini">Stream C</a>
+<a class="button" href="https://twitch.tv/DDRIllini2">Stream D</a>
 
 <h5>Downloads</h5>
 <a class="button button-primary" href="https://drive.google.com/file/d/1b2XRrY3XpEEcgFsLxh13v0lPUZD-N9Hr/view?usp=sharing">Singles DL</a>
