--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 4%">
-        <h3 style="margin-bottom:0.2em;">RIP 14</h4>
-        <p>March 15-17, 2024 @ UIUC</p>
+        <h3 style="margin-bottom:0.2em;">RIP 14</h3>
 
         <!-- Standard buttons -->
         <p>
@@ -38,10 +37,10 @@
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
 
 <h5>Streams</h5>
-<a class="button button-primary" href="https://twitch.tv/CarterTheQ">Stream A</a>
-<a class="button button-primary" href="https://twitch.tv/IntlTiming">Stream B</a> <br />
-<a class="button button-primary" href="https://twitch.tv/DDRIllini">Stream C</a>
-<a class="button button-primary" href="https://twitch.tv/DDRIllini2">Stream D</a>
+<a class="button" href="#">Stream A</a>
+<a class="button" href="#">Stream B</a> <br />
+<a class="button" href="#">Stream C</a>
+<a class="button" href="#">Stream D</a>
 
 <h5>Downloads</h5>
 <a class="button button-primary" href="https://drive.google.com/file/d/1b2XRrY3XpEEcgFsLxh13v0lPUZD-N9Hr/view?usp=sharing">Singles DL</a>
@@ -55,7 +54,7 @@
 
 <h5>Local Guides</h5>
 <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
-	<a class="button button-primary" href="accommodations.html">Where to Stay</a>
+<a class="button button-primary" href="accommodations.html">Where to Stay</a>
 <br>
 <a class="button button-primary" href="transportation-local.html">Local Transportation &amp; Parking</a>
 <a class="button button-primary" href="food.html">Food!</a>
